--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "starter",
+  "name": "natours",
   "version": "1.0.0",
-  "description": "landing page for natours ",
+  "description": "Exciting tours for adventrous people",
   "main": "index.js",
   "scripts": {
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed"
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
-  "author": "kunal",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kunalkumar156/Natours-Exciting-tours-for-adventrous-peoples-.git"
+  },
+  "author": "Kishor kunal",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kunalkumar156/Natours-Exciting-tours-for-adventrous-peoples-/issues"
+  },
+  "homepage": "https://github.com/kunalkumar156/Natours-Exciting-tours-for-adventrous-peoples-#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "concat": "^1.0.3",
     "node-sass": "^8.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
-    "sass": "^1.56.2"
+    "sass": "^1.57.1"
   }
 }
